# particle_physics

./: JNx_Jorge Rodriguez Cambeiro_15071820.ipynb  README.md  background_spectrum.csv  calibration.py  extra_code.py  functions.py  graphs_data.ipynb  intro_experiment.ipynb  monte_carlo.py  particle_physics.ipynb  particle_physics_method1.ipynb  particle_physics_method2.ipynb  pyproject.toml  spectrum_1.csv  spectrum_1.txt  spectrum_2.csv  spectrum_2.txt  spectrum_doos_x_2.csv  spectrum_doos_x_3.csv  spectrum_no_source.csv  test.py  test_2.py
calibration_and_background/: spectrum_cali.csv
calibration_and_background_2/: spectrum_scaling.csv
calibration_and_background_method1/: spectrum_background.csv  spectrum_source.csv
calibration_and_background_method2/: background_spectrum.csv
spectrum_x/: spectrum_doos_x_1.csv  spectrum_doos_x_2.csv  spectrum_doos_x_4.csv  spectrum_doos_x_5.csv
spectrum_x_2/: spectrum_x1.csv  spectrum_x2.csv
spectrum_x_method1/: spectrum_doos_x_1.csv  spectrum_doos_x_3.csv  spectrum_doos_x_4.csv
spectrum_x_method2/: spectrum_x3.csv  spectrum_x4.csv  spectrum_x5.csv
spectrum_y/: spectrum_doos_y_3.csv
spectrum_y_2/: spectrum_y2.csv  spectrum_y3.csv  spectrum_y4.csv
spectrum_y_method1/: spectrum_doos_y_1.csv  spectrum_doos_y_2.csv  spectrum_doos_y_4.csv
spectrum_y_method2/: spectrum_y1.csv
