[tool.poetry]
name = "particle-physics"
version = "0.1.0"
description = ""
authors = ["Jorge Rodriguez Cambeiro <jorgecambeiro2002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
matplotlib = "^3.9.4"
seaborn = "^0.13.2"
panda = "^0.3.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
